# qmm

./: .gitattributes  CConfigMgr.cpp  CConfigMgr.h  CDLL.cpp  CDLL.h  CDLLMod.cpp  CDLLMod.h  CEngineMgr.cpp  CEngineMgr.h  CLinkList.h  CMod.h  CModMgr.cpp  CModMgr.h  CPlugin.cpp  CPlugin.h  CPluginMgr.cpp  CPluginMgr.h  CVMMod.cpp  CVMMod.h  Config.mak  changelog.txt  game_api.cpp  game_api.h  game_jk2.cpp  game_jka.cpp  game_q3a.cpp  game_rtcwet.cpp  game_rtcwmp.cpp  game_rtcwsp.cpp  main.cpp  osdef.cpp  osdef.h  plugin.cpp  qmm.h  qmmapi.h  qvm.h  readme.txt  util.cpp  util.h  version.h
advchat_qmm/: Config.mak  Makefile  changelog.txt  main.cpp  readme.txt  version.h
misc/: jk2_g_syscalls.asm  q3a_g_syscalls.asm  qmm_extra.h
msvc/: .cvsignore  qmm.rc  resource.h
nocrash_qmm/: Config.mak  Makefile  changelog.txt  main.cpp  readme.txt  version.h
pdb/: .cvsignore
qadmin/: Config.mak  Makefile  changelog.txt  cmds.cpp  main.cpp  main.h  readme.txt  util.cpp  util.h  version.h  vote.cpp  vote.h
qmm/: CDLL.cpp  CDLL.h  CEngine.cpp  CEngine.h  CLinkList.h  CMod.cpp  CMod.h  CPlugin.cpp  CPlugin.h  Config.mak  Makefile  changelog.txt  main.cpp  main.h  plugins.ini  qmm.h  qmmexec.cfg  readme.txt  util.cpp  util.h  version.h
qmm1/: CConfigMgr.cpp  CConfigMgr.h  CDLL.cpp  CDLL.h  CDLLMod.cpp  CDLLMod.h  CEngineMgr.h  CLinkList.h  CModMgr.cpp  CPlugin.cpp  CPlugin.h  CPluginMgr.cpp  CVMMod.cpp  CVMMod.h  Makefile  changelog.txt  game_api.cpp  game_api.h  (+12 more)
qmm1/pdb/src/: Makefile  Makefile.am  Makefile.in  binarytree.c  hash.c  list.c  pdb.c  pdb_types.c  str.c
(+144 files in other folders)
